took out LaTeX usage of RCS info
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1742 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/faq/pyxfaq.tex
+++ b/faq/pyxfaq.tex
@@ -1,7 +1,7 @@
+% $Id$
 \documentclass[11pt,DIV14]{scrartcl}
 \usepackage[latin1]{inputenc}
 \usepackage{url}
-\usepackage{rcs}
 \usepackage{mathptmx}
 %\usepackage[all,comments]{glifaq}
 \usepackage[answered]{glifaq}
@@ -12,10 +12,8 @@
             ,colorlinks=true%
             ,linkcolor=blue}
 \def\pyxversion{\input{pyxversion}}
+%\def\pyxversion{0.6\,a}
 \begin{document}
-\RCS $Id$
-\RCS $Revision$
-\RCS $Date$
 
 \begin{center}
 \LARGE\sffamily Some frequently and\\ 
