fix errorbar range adjustment
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/branches/pyx_0_6_patches/pyx@1743 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -67,6 +67,12 @@ TODO:
     - describe creation and modification (inplace and ``modify by new'') of
       graph data
 
+
+0.6.x (????/??/??):
+   - graph/axis module:
+     - fix errorbar range adjustment
+
+
 0.6.3 (2004/04/27):
    - graph module:
      - fix drawing with background
