add bitmap section to the manual
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1753 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -57,6 +57,7 @@ in publication-ready quality.
 \include{box}
 \include{connector}
 \include{epsfile}
+\include{bitmap}
 \include{bbox}
 \include{color}
 \include{unit}
