handle "BoundingBox: (atend)" (cf. bug #945621)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1754 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -117,6 +117,8 @@ TODO:
     - pathel -> pathitem, etc. renaming 
   - deformer module: new
     - moved cycloid and smoothed from deco into deformer
+  - bbox module:
+    - handle "BoundingBox: (atend)" (cf. bug #945621)
 
 
 0.6.x (????/??/??):
