--- a/manual/epsfile.tex
+++ b/manual/epsfile.tex
@@ -41,6 +41,7 @@ horizontal alignment: \texttt{l} for left, \texttt{c} for center
 file? Set to $0$ with care.\\
 \texttt{bbox=None} & If given, use \texttt{bbox} instance instead of
 bounding box of EPS file.
+\texttt{kpsearch=0} & Search for file using the kpathsea library.
 \end{tabularx}
 
 
