extend pyxrc example for psfontmap
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1761 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/faq/pyxfaq.tex
+++ b/faq/pyxfaq.tex
@@ -711,6 +711,7 @@ the appropriate \texttt{pyxrc} file which is either the systemwide
 names of the map files to be read by \PyX{} should be appended separated by 
 whitespaces like in the following example:
 \begin{progcode}
+[text]\\
 fontmaps = psfonts.map psfonts.cmz psfonts.amz
 \end{progcode}
 The same effect can be achieved by inserting the following line into the
