--- a/manual/epsfile.tex
+++ b/manual/epsfile.tex
@@ -40,7 +40,7 @@ horizontal alignment: \texttt{l} for left, \texttt{c} for center
 \texttt{translatebbox=1} & Use lower left corner of bounding box of EPS
 file? Set to $0$ with care.\\
 \texttt{bbox=None} & If given, use \texttt{bbox} instance instead of
-bounding box of EPS file.
+bounding box of EPS file.\\
 \texttt{kpsearch=0} & Search for file using the kpathsea library.
 \end{tabularx}
 
