postpone reading of fontmap files until TeX/LaTeX is started
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1765 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -100,6 +100,8 @@ TODO:
       documentation)
     - support for string initialization removed
     - support for initialisation with other length removed
+  - text module:
+    - postpone reading of fontmap files until TeX/LaTeX is started
   - canvas module:
     - added new classes page and document for multipage PostScript output
   - style module:
