class graph.line attribute error corrected
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1769 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -636,7 +636,7 @@ defined as:
   \class{function} and \class{paramfunction}.
 \end{classdesc}
 
-\begin{classdesc}{line}{errorbarattrs=[]}
+\begin{classdesc}{line}{lineattrs=[]}
   This class is a style to stroke lines into a graph. It is equivalent
   to \class{symbollines} except that it does not allow for symbols and
   errorbars. Thus it also does not accept data names for error bars.
