sign of font number in dvifile (reported by Michael Gruber)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1771 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -104,6 +104,7 @@ TODO:
     - support for initialisation with other length removed
   - text module:
     - postpone reading of fontmap files until TeX/LaTeX is started
+    - sign of font number in dvifile (reported by Michael Gruber)
   - canvas module:
     - added new classes page and document for multipage PostScript output
   - style module:
