fix empty tick lists bug
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/branches/pyx_0_6_patches/pyx@1777 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -71,6 +71,7 @@ TODO:
 0.6.x (????/??/??):
    - graph/axis module:
      - fix errorbar range adjustment
+     - fix empty tick lists bug (reported by Marko Vendelin, cf. bug #977323)
 
 
 0.6.3 (2004/04/27):
@@ -81,6 +82,7 @@ TODO:
    - distribution:
      - include source for faq and manual
      - distribute the pdf instead of postscript (manual, faq, examples)
+
 
 0.6.2 (2004/04/07):
   - graph module:
